@@ -893,3 +893,4 @@ enchantment.thunder=The Power of Thor
 //Keys
 key.immersibrook.category=Immersibrook
 key.vestToggle.toggle=Toggle Vest Glow
+im.vest.toggle=Glow Toggled
